Alignment Error Fixed

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ li {
 }
 
 li a{
-	padding: 16px;
 	font-size: 50px;
 	color: #ff7272;
 }
